--- a/.travis.yml
+++ b/.travis.yml
@@ -8,26 +8,10 @@ services:
 
 os:
   - linux
-#  - osx
+  - osx
 
 julia:
   - nightly
-
-env:
-  - POSTGRESQL_VERSION=9.6 PGHOST="/var/run/postgresql"
-
-before_install:
-  # PostgreSQL 9.6.6
-  - sudo service postgresql stop && sudo service postgresql start $POSTGRESQL_VERSION
-  - psql --version
-  - psql -U postgres -tc 'SHOW server_version'
-  - psql -U postgres -c '\conninfo'
-  - psql -c "CREATE DATABASE postgresqltest;" -U postgres
-  # MySQL
-  - mysql --version
-  - mysql -e 'show variables like "socket";' -uroot
-  - mysql -e 'CREATE DATABASE mysqltest;' -uroot
-  - mysql -e 'GRANT ALL PRIVILEGES ON mysqltest.* TO "root"@"localhost" IDENTIFIED BY ""' -uroot
 
 matrix:
   allow_failures:
@@ -40,36 +24,34 @@ notifications:
 git:
   depth: 99999999
 
-## uncomment the following lines to allow failures on nightly julia
-## (tests will run but not make your overall status red)
-#matrix:
-#  allow_failures:
-#  - julia: nightly
-
-## uncomment and modify the following lines to manually install system packages
-#addons:
-#  apt: # apt-get for linux
-#    packages:
-#    - gfortran
-
-before_script: # homebrew for mac
-  - export OLD_PATH=$LD_LIBRARY_PATH
-  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:`mysql_config --libs | cut -d ' ' -f1 | sed 's/-L//'`
-#  - if [ "$TRAVIS_OS_NAME" == osx ]; then brew install mysql          ; fi
-#  - if [ "$TRAVIS_OS_NAME" == osx ]; then mysql.server start          ; fi
-
-## uncomment the following lines to override the default test script
+before_script:
+  # linux - PostgreSQL - 9.6.6
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then sudo service postgresql stop && sudo service postgresql start $POSTGRESQL_VERSION               ; fi
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then psql --version                                                                                  ; fi
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then psql -U postgres -tc 'SHOW server_version'                                                      ; fi
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then psql -U postgres -c '\conninfo'                                                                 ; fi
+  # linux - MySQL      - 5.6.33
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then mysql -e 'show variables like "socket";' -uroot                                                 ; fi
+  # osx   - PostgreSQL - 9.6.5
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then rm -rf /usr/local/var/postgres                                                                  ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then initdb /usr/local/var/postgres                                                                  ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then pg_ctl -D /usr/local/var/postgres start                                                         ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then until createuser -s postgres; do echo "Postgres is unavailable - sleeping"; sleep 0.05; done    ; fi
+  # osx   - MySQL      - 5.7.21
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then brew install   mysql                                                                            ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then brew services start mysql                                                                       ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then mysql.server start                                                                              ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then sleep 0.1                                                                                       ; fi
+  - psql -c "CREATE DATABASE postgresqltest;" -U postgres
+  - psql --version
+  - mysql -e 'CREATE DATABASE mysqltest;' -uroot
+  - mysql -e 'GRANT ALL PRIVILEGES ON mysqltest.* TO "root"@"localhost" IDENTIFIED BY ""' -uroot
+  - mysql --version
 
 script:
   - julia -e 'using Pkg; Pkg.add("DataStreams"); Pkg.checkout("DataStreams", "master"); using DataStreams' # for MySQL.jl
   - julia --depwarn=no -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("Octo"); Pkg.test("Octo"; coverage=true)'
 
-after_script:
-  - export LD_LIBRARY_PATH=$OLD_PATH
-  - unset OLD_PATH
-
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'using Pkg; cd(Pkg.dir("Octo")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'using Pkg; cd(Pkg.dir("Octo")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then julia -e 'using Pkg; cd(Pkg.dir("Octo")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'   ; fi
