--- a/appveyor.yml
+++ b/appveyor.yml
@@ -211,18 +211,16 @@ install:
 build_script:
     # Add PostgreSQL binaries to the path
     - PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
-    - C:\projects\julia\bin\julia --color=yes -e "using Pkg; Pkg.REPLMode.pkgstr(\"add DataStreams#master\")"
-    - C:\projects\julia\bin\julia --color=yes -e "using Pkg; Pkg.REPLMode.pkgstr(\"add LibPQ#master\")"
-    - C:\projects\julia\bin\julia --color=yes -e "using Pkg; Pkg.REPLMode.pkgstr(\"add MySQL#master\")"
-    #- C:\projects\julia\bin\julia --color=yes -e "using Pkg; Pkg.REPLMode.pkgstr(\"add SQLite#master\")"
     - CD c:\projects\octo_jl
     - IF EXIST .git\shallow (git fetch --unshallow)
-    - C:\projects\julia\bin\julia --color=yes -e "using Octo"
+    - C:\projects\julia\bin\julia --color=yes -e "using Pkg; Pkg.REPLMode.pkgstr(\"add DataStreams#master LibPQ#master MySQL#master\")"
+    #- C:\projects\julia\bin\julia --color=yes -e "using Pkg; Pkg.REPLMode.pkgstr(\"add SQLite#master\")"
+    - C:\projects\julia\bin\julia --color=yes -e "using Pkg; Pkg.instantiate()"
+    - C:\projects\julia\bin\julia --color=yes -e "pushfirst!(LOAD_PATH, \"@.\"); using Octo"
 
 before_test:
     # Create and setup PostgreSQL database for the tests
     - createdb %OCTO_TESTDB%
 
 test_script:
-  - CD test
-  - C:\projects\julia\bin\julia --color=yes --depwarn=no runtests.jl
+  - C:\projects\julia\bin\julia --color=yes --depwarn=no -e "pushfirst!(LOAD_PATH, \"@.\"); cd(\"test\"); include(\"runtests.jl\")"
