--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,10 @@ julia:
   - 1.0
   - nightly
 
+env:
+  - POSTGRESQL_VERSION=9.6 PGHOST="/var/run/postgresql"
+
 matrix:
-  include:
-    - os: linux
-      env: POSTGRESQL_VERSION=9.6 PGHOST="/var/run/postgresql"
-    - os: osx
   allow_failures:
     - julia: nightly
   fast_finish: true
