--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,17 @@
 authors = ["WooKyoung Noh <wookay.noh@gmail.com>"]
 name = "Octo"
-uuid = "c980e7ac-2ea9-11e8-1f3c-e1d64ddcfff6"
-version = "0.1.2"
+uuid = "16905944-f982-529b-abb2-b839f98f160b"
+version = "0.1.3"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+
+[extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
+SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
+MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
+ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
+
+[targets]
+test = ["Test", "LibPQ", "SQLite", "MySQL", "ODBC"]
