--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 authors = ["WooKyoung Noh <wookay.noh@gmail.com>"]
 name = "Octo"
 uuid = "16905944-f982-529b-abb2-b839f98f160b"
-version = "0.2.0"
+version = "0.2.1"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -12,6 +12,7 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
+JDBC = "6042db11-3c3d-5e84-8dba-9cbf74c9ba48"
 
 [targets]
-test = ["Test", "LibPQ", "SQLite", "MySQL", "ODBC"]
+test = ["Test", "LibPQ", "SQLite", "MySQL", "ODBC", "JDBC"]
