--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,9 @@ version = "0.2.2"
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
+[compat]
+julia = "1.0.3"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Jive = "ba5e3d4b-8524-549f-bc71-e76ad9e9deed"
