--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,15 @@ language: julia
 
 os:
   - linux
-# - osx # TODO: Got errors on starting postgresql
+  - osx
+
+julia:
+  - 1.1
+
+matrix:
+  include:
+    - os: linux
+      julia: 1.3
 
 services:
   - postgresql
@@ -20,33 +28,30 @@ addons:
       - unixodbc-dev
       - odbc-postgresql
 
-julia:
-  - 1.1
-  - nightly
-
 env:
   - POSTGRESQL_VERSION=9.6 PGHOST="/var/run/postgresql" ODBC_TEST_DRIVERS="postgresql"
 
-before_script:
-  # linux - PostgreSQL - 9.6.6
-  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then sudo service postgresql stop && sudo service postgresql start $POSTGRESQL_VERSION            ; fi
-  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then psql --version                                                                               ; fi
-  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then psql -U postgres -tc 'SHOW server_version'                                                   ; fi
-  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then psql -U postgres -c '\conninfo'                                                              ; fi
-
-  # osx   - PostgreSQL - 9.6.5
-  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then rm -rf /usr/local/var/postgres                                                               ; fi
-  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then initdb /usr/local/var/postgres                                                               ; fi
-  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then pg_ctl -D /usr/local/var/postgres start                                                      ; fi
-  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then until createuser -s postgres; do echo "Postgres is unavailable - sleeping"; sleep 0.05; done ; fi
-
-  # PostgreSQL
-  - psql -c "CREATE DATABASE postgresqltest;" -U postgres
+before_install:
   - psql --version
 
-  # ODBC
-  - julia --color=yes -e 'using Pkg; pkg"add ODBC@0.8.1"; pkg"precompile"'
-  - julia --color=yes -e 'using ODBC; setupdir=normpath(pathof(ODBC), "..", "..", "test", "setup"); run(`odbcinst -i -s -h -f $(normpath(setupdir, "postgresqltest.odbc.ini"))`)'
+before_script:
+  # PostgreSQL - osx
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then rm -rf /usr/local/var/postgres                                                               ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then initdb /usr/local/var/postgres -E utf8                                                       ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then pg_ctl -D /usr/local/var/postgres start && sleep 3 || true                                   ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then sudo mkdir -p /var/run/postgresql/                                                           ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then sudo ln -s /tmp/.s.PGSQL.5432 /var/run/postgresql/                                           ; fi
+  - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then sudo -u travis createuser -s postgres                                                        ; fi
+
+  # PostgreSQL
+  - psql --version
+  - psql -U postgres -tc 'SHOW server_version'
+  - psql -U postgres -c '\conninfo'
+  - psql -c "CREATE DATABASE postgresqltest;" -U postgres
+
+  # ODBC - linux
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then julia --color=yes -e 'using Pkg; pkg"add ODBC@0.8.1"; pkg"precompile"'                       ; fi
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then julia --color=yes -e 'using ODBC; setupdir=normpath(pathof(ODBC), "..", "..", "test", "setup"); run(`odbcinst -i -s -h -f $(normpath(setupdir, "postgresqltest.odbc.ini"))`)' ; fi
 
   # linux - MySQL      - 5.6.33
   - if [[ "$TRAVIS_OS_NAME" == linux ]]; then mysql -e 'show variables like "socket";' -uroot                                              ; fi
@@ -59,7 +64,7 @@ before_script:
 
   # MySQL
   - mysql -e 'CREATE DATABASE mysqltest;' -uroot
-  - mysql -e 'GRANT ALL PRIVILEGES ON mysqltest.* TO "root"@"localhost" IDENTIFIED BY ""' -uroot
+  - mysql -e 'GRANT ALL PRIVILEGES ON mysqltest.* TO "root"@"localhost"' -uroot
   - mysql --version
 
 script:
