--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,8 @@ os:
   - osx
 
 julia:
-  - 1.1
-
-matrix:
-  include:
-    - os: linux
-      julia: 1.3
+  - 1.2
+  - 1.3
 
 services:
   - postgresql
@@ -68,11 +64,11 @@ before_script:
   - mysql --version
 
 script:
-  -                 julia --color=yes --handle-signals=no --project=. -e 'using Pkg; Pkg.test()'
+  -                 julia --color=yes --handle-signals=no --project=. -e 'using Pkg; Pkg.test(coverage=true)'
   - JIVE_PROCS=auto julia --color=yes                     --project=. -e 'using Pkg; Pkg.test()'
 
 after_success:
-  - if [[ "$TRAVIS_OS_NAME" == linux && "$TRAVIS_JULIA_VERSION" == nightly ]] ; then julia --color=yes --project=. -e 'using Pkg;
-                                                                                                                       Pkg.add("Coverage");
-                                                                                                                       using Coverage;
-                                                                                                                       Codecov.submit(process_folder())' ; fi
+  - if [[ "$TRAVIS_OS_NAME" == linux && "$TRAVIS_JULIA_VERSION" == 1.2 ]] ; then julia --color=yes --project=. -e 'using Pkg;
+                                                                                                                   Pkg.add("Coverage");
+                                                                                                                   using Coverage;
+                                                                                                                   Codecov.submit(process_folder())' ; fi
