--- a/.travis.yml
+++ b/.travis.yml
@@ -64,8 +64,8 @@ before_script:
   - mysql --version
 
 script:
-  -                 julia --color=yes --handle-signals=no --project=. -e 'using Pkg; Pkg.test(coverage=true)'
-  - JIVE_PROCS=auto julia --color=yes                     --project=. -e 'using Pkg; Pkg.test()'
+  -                 julia --color=yes --handle-signals=no --project -e 'using Pkg; pkg"instantiate"; pkg"precompile"; Pkg.test(coverage=true)'
+  - JIVE_PROCS=auto julia --color=yes --handle-signals=no --project -e 'using Pkg; pkg"instantiate"; pkg"precompile"; Pkg.test()'
 
 after_success:
   - if [[ "$TRAVIS_OS_NAME" == linux && "$TRAVIS_JULIA_VERSION" == 1.2 ]] ; then julia --color=yes --project=. -e 'using Pkg;
